--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,16 +1,16 @@
 cmake_minimum_required(VERSION 3.5.1)
-project(sc C)
+project(sc_utils C)
 
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 set(CMAKE_C_EXTENSIONS OFF)
 
 add_library(
-        sc SHARED
-        sc.c
-        sc.h)
+    sc_utils SHARED
+    sc_utils.c
+    sc_utils.h)
 
-target_include_directories(sc PUBLIC ${CMAKE_CURRENT_LIST_DIR})
+target_include_directories(sc_utils PUBLIC ${CMAKE_CURRENT_LIST_DIR})
 
 if (NOT CMAKE_C_COMPILER_ID MATCHES "MSVC")
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -Wextra -pedantic -Werror -pthread")
